feat: Plug-n-Play Agent Installers & Core Management Scripts
- Added Linux Agent Installer (install-sakin-agent-linux.sh) with security checks (checksum, immutability) and proxy support.
- Hardened systemd service for Linux Agent.
- Added Windows Agent Installer (NSIS script) with Uninstall Password and configuration wizard.
- Added --check-health diagnostics arg to both Linux and Windows agents.
- Added Core management scripts: download-all-services.sh and start-all-services.sh.
- Added Installation documentation.

--- a/sakin-agent-linux/packaging/systemd/sakin-agent-linux.service
+++ b/sakin-agent-linux/packaging/systemd/sakin-agent-linux.service
@@ -20,10 +20,14 @@ NoNewPrivileges=true
 PrivateTmp=true
 ProtectSystem=strict
 ProtectHome=true
-ReadWritePaths=/opt/sakin-agent/logs /opt/sakin-agent/scripts
+ReadWritePaths=/opt/sakin-agent/logs /opt/sakin-agent/scripts /var/log/sakin-agent /var/lib/sakin-agent
 RestrictSUIDSGID=true
 RemoveIPC=true
 PrivateDevices=true
+MemoryDenyWriteExecute=true
+ProtectKernelTunables=true
+ProtectControlGroups=true
+ProtectKernelModules=true
 
 # Resource limits
 LimitNOFILE=65536
